[gd_scene load_steps=9 format=2]

[ext_resource path="res://OrangeEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/orange_enemy1.png" type="Texture" id=2]
[ext_resource path="res://Assets/orange_enemy2.png" type="Texture" id=3]
[ext_resource path="res://Assets/orange_enemy_die.png" type="Texture" id=4]
[ext_resource path="res://Assets/orange_enemy3.png" type="Texture" id=5]
[ext_resource path="res://Label.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 32 )

[node name="OrangeEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -0.00218237
z_index = 1
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.103378, 0.723633 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -22, 1.128 )
rotation = -0.013227
scale = Vector2( 1, 1.2 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.516884, 0.827009 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -39.8458, 0.681129 )

[node name="dead" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
max_distance = 6000.0

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Label" parent="." instance=ExtResource( 6 )]
margin_left = -5.0
margin_top = -50.0
margin_right = 35.0
margin_bottom = -19.0

[node name="Timer2" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
